tests/sources/invalid/generics/generic_declaration_errors.fire
// Malformed generic type-argument lists in variable *declarations*
// (as opposed to constructor calls -- see generic_call_errors.fire).
copyable class Pair<T, U> {
    first: T;
    second: U;

    fn Pair(first: T, second: U) {
        this.first = first;
        this.second = second;
    }
}

good: Pair<int32, int32> = Pair<int32, int32>(1, 2);

// Non-type token inside a generic-declaration type-argument list.
a: Pair<5, int32> = good;  //~ ERROR FS-PARSE-0010 @9
//~^ ERROR FS-PARSE-0010 @21

// Non-type token inside a *nested* generic type-argument list.
b: Pair<Pair<5, int32>, int32> = good;  //~ ERROR FS-PARSE-0010 @14
//~^ ERROR FS-PARSE-0010 @34

// Missing '>' closing a nested generic type-argument list.
Pair<c: Pair<int32, int32, int32> = good;  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-SEM-0002 @6

// Missing '>' closing the outer generic type-argument list.
Pair<int32, d: int32 = good;  //~ ERROR FS-PARSE-0010 @1
//~^ ERROR FS-SEM-0002 @13
